adding mobile navigation and header

--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -11,5 +11,8 @@ $l_03: hsl(0, 0%, 24%);
 $l_04: hsl(0, 0%, 67%);
 $l_05: hsl(0, 0%, 100%);
 
-$primary: hsl(144, 79%, 78%);
-$secondary: #ffc1f3;
+// $primary: hsl(144, 79%, 78%);
+$primary: hsl(2, 80%, 50%);
+$secondary: hsl(189, 53%, 56%);
+
+$shadow: 0 45px 35px -15px rgba(0, 0, 0, 0.25);
