extracting social media icons into separate partial

--- a/views/partials/about.ejs
+++ b/views/partials/about.ejs
@@ -25,14 +25,7 @@
         View more on YouTube: <a href="https://www.youtube.com/channel/UCnTVj2blZd_9_xpbo2t7ARw">Visit my channel</a>.
       </p>
     </div>
-    <div>
-      <p>Find me on social media:</p>
-      <a href=""><svg><use href="#github"></use></svg></a>
-      <a href=""><svg><use href="#linkedin"></use></svg></a>
-      <a href=""><svg><use href="#youtube"></use></svg></a>
-      <a href=""><svg><use href="#twitter"></use></svg></a>
-      <a href=""><svg><use href="#instagram"></use></svg></a>
-      
-    </div>
+    
+    <%- include('./socials'); %>
   </section>
 <% } %>
