--- a/views/partials/socials.ejs
+++ b/views/partials/socials.ejs
@@ -9,5 +9,5 @@
   <a href="https://twitter.com/pmcoding">
     <svg><use href="#twitter"></use></svg></a>
   <a href="https://codepen.io/patriciamolnar/">
-    <img src="https://blog.codepen.io/wp-content/uploads/2012/06/Button-Fill-Black-Large.png" width="24" height="24" alt="">  
+    <img src="https://blog.codepen.io/wp-content/uploads/2012/06/Button-Fill-Black-Large.png" width="24" height="24" alt=""></a>
 </div>
