dividing style.scss into partials

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -1,247 +1,8 @@
 @import 'variables'; 
-
-html {
-  font-size: 62.5%
-}
-
-body {
-  font-size: 1.6rem;
-  font-family: $font;
-  background-color: $secondary; 
-  color: lighten($secondary, 100%); 
-}
-
-h1, h2, h3, h4 {
-  margin: 0;
-}
-
-h3 {
-  font-size: 3rem;
-}
-
-h4 {
-  font-size: 2rem;
-}
-
-.button {
-  display: inline-block;
-  font-size: 1.6rem;
-  background-color: $primary;
-  color: $secondary;
-  padding: 0.5em 1em;
-  margin-top: 1em;
-  box-shadow: $shadow; 
-  font-weight: 500;
-  border-bottom: none; 
-
-  &::after {
-    content: ''; 
-    display: inline-block;
-    width: 0;
-    height: 0.4em; 
-    border-top: 3px solid black;
-    border-right: 3px solid black; 
-    margin-left: 3px;
-    margin-bottom: 1px;
-    transform: rotate(45deg) scaleX(0);
-    transform-style: preserve-3d;
-    opacity: 0;
-    transition: all 0.4s ease-in-out;
-  }
-
-  &:hover::after {
-    transform: rotate(45deg) scaleX(1);
-    width: 0.4em;
-    opacity: 1;
-  }
-}
-
-a {
-  color: $primary;
-  text-decoration: none;
-  border-bottom: 1px solid $primary;
-}
-
-::marker {
-  color: $primary; 
-}
-
-.primary {
-  color: $primary;
-}
-
-.underline {
-  color: lighten($secondary, 80%)
-}
-
-// Mobile Burger Navigation
-.header__flex {
-  display: flex; 
-  flex-direction: row;
-  align-items: center;
-}
-
-#burger {
-  display: inline-block;  
-  position: relative; 
-  padding: 0.5em;
-  z-index: 2;
-
-  .bar1, .bar2, .bar3 {
-    width: 2.5rem;
-    height: 0.2rem;
-    background-color: lighten($secondary, 100%);
-    margin: 0.6rem 0;
-    transition: 0.3s;
-    pointer-events: none;
-  }
-
-  // when user expands navigation
-  &.change {
-    transform: rotate(90deg);
-    transition: all 0.5s ease-in-out; 
-
-    .bar1 {
-      -webkit-transform: rotate(-45deg) translate(-6px, 6px);
-      transform: rotate(-45deg) translate(-5px, 6px);
-      background-color: $secondary;
-    }
-
-    .bar2 {
-      opacity: 0;
-    }
-
-    .bar3 {
-      -webkit-transform: rotate(45deg) translate(-6px, -6px);
-      transform: rotate(45deg) translate(-5px, -6px);
-      background-color: $secondary;
-    }
-  }
-}
-
-#nav {
-  position: absolute;
-  top: 0;
-  height: 0; 
-  overflow: hidden; 
-  background-color: $primary;
-  opacity: 0;
-  transition: all 0.3s ease-in-out;
-  z-index: 1;
-
-  &.show {
-    height: 100%;
-    width: 100%; 
-    opacity: 1;
-  }
-
-  ul {
-    list-style-type: none;
-    margin-top: 2.5em;
-    padding-left: 0;
-  }
-
-  a {
-    display: block;
-    color: $secondary;
-    text-decoration: none; 
-    font-weight: 600;
-    font-size: 4rem;
-    padding: 0.5em;
-  }
-}
-
-// Hero 
-.hero {
-  @include pad(); 
-
-  p {
-    margin: 0;
-  }
-
-  &__name {
-    font-size: calc(2rem + 1vw);
-    font-weight: 600;
-  }
-
-  &__title {
-    text-transform: uppercase;
-    font-size: calc(4.5rem + 1vw);
-    font-weight: 800; 
-    padding: 0.1em 0;
-    
-    span:nth-of-type(1) {
-      color: $secondary;
-      text-shadow:
-      -1px -1px 0 lighten($secondary, 100%),  
-      1px -1px 0 lighten($secondary, 100%),
-      -1px 1px 0 lighten($secondary, 100%),
-      1px 1px 0 lighten($secondary, 100%);
-    }
-
-    span:nth-of-type(3) {
-      color: $primary; 
-    }
-  }
-
-  &__skills {
-    color: lighten($secondary, 90%);
-  }
-  a {
-    @extend .button; 
-    font-size: 1.8rem;
-  }
-}
-
-section {
-  @include pad();
-  margin: 1em 0;
-}
-
-.portfolio {
-  background-color: lighten($secondary, 6%); 
-
-  .grid {
-    display: grid; 
-    grid-template-columns: 1fr;
-    grid-gap: $default;
-
-    &__card {
-      background-color: lighten($secondary, 10%);
-      box-shadow: $shadow;
-    }  
-
-    &__video {
-      position: relative;
-      padding-bottom: 56.25%;
-    
-      iframe {
-        position: absolute; 
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-      } 
-    }
-
-    &__copy {
-      @include pad();
-    }
-
-    &__title {
-      color: $primary;
-    }
-
-    &__desc {
-      color: lighten($secondary, 85%);
-    }
-  }
-
-  
-
-  
-
-}
+@import 'mixins';
+@import 'base';
+@import 'header';
+@import 'portfolio';
 
 .about {
   @extend .portfolio; 
