--- a/views/partials/contact.ejs
+++ b/views/partials/contact.ejs
@@ -1,7 +1,12 @@
 <section id="contact">
   <h3>Contact<span class="primary">.</span></h3>
   <p>Thank you for checking out my portfolio. I am currently looking for an entry-level web developer position. If you have a job opening please feel free to call me on 0123456789 or send me an email to hello@patriciamolnar.com.</p>
-  <a href="" class="button">Contact</a>
+  <a href="#" class="button">Contact</a>
+  <a href="" id="contact-button">
+    <svg><use href="#envelope"></use></svg>
+  </a>
+
+  <br />
   <small>This link will open your mail software</small>
 </section>
 </main>
