--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,14 @@
 <footer>
-  <p>&copy; <span id="current-year"></span>Portfolio page of Patricia Molnar - full stack Web Developer</p>
-  <p>Email: hello@patriciamolnar.com</p>
-  <p>Phone: 0123456789</p>
+  <p>&copy; <span id="current-year"></span>Portfolio page of Patricia Molnar - Full Stack Web Developer</p>
+  <div class="contact-details">
+    <span>
+      <svg><use href="#envelope"></use></svg>&nbsp;
+      <a href="mailto:hello@patriciamolnar.com">hello@patriciamolnar.com</a>
+    </span>
+    <span>
+      <svg><use href="#phone"></use></svg> 0123456789
+    </span>   
+  </div>
   <%- include('./socials') %>
 </footer>
 
@@ -37,3 +44,14 @@
 </symbol>
 </svg>
 
+<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+<symbol id="envelope">
+    <path d="M12 12.713l-11.985-9.713h23.971l-11.986 9.713zm-5.425-1.822l-6.575-5.329v12.501l6.575-7.172zm10.85 0l6.575 7.172v-12.501l-6.575 5.329zm-1.557 1.261l-3.868 3.135-3.868-3.135-8.11 8.848h23.956l-8.11-8.848z"/>
+</symbol>   
+</svg>
+
+<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+<symbol id="phone">
+    <path d="M20 22.621l-3.521-6.795c-.008.004-1.974.97-2.064 1.011-2.24 1.086-6.799-7.82-4.609-8.994l2.083-1.026-3.493-6.817-2.106 1.039c-7.202 3.755 4.233 25.982 11.6 22.615.121-.055 2.102-1.029 2.11-1.033z"/>
+</symbol>
+</svg>
