--- a/public/css/_header.scss
+++ b/public/css/_header.scss
@@ -70,49 +70,118 @@
     color: $secondary;
     text-decoration: none; 
     font-weight: 600;
-    font-size: 4rem;
+    font-size: calc(1rem + 5vw);
     padding: 0.5em;
   }
 }
 
 // Hero 
 .hero {
-  @include pad(); 
+  height: 100vh;
+  position: relative;
 
-  p {
-    margin: 0;
+  &__background {
+    margin-top: -5rem;
+    position: absolute; 
+    inset: 0;
+    background-color: $secondary; 
+    // background-image: url('https://images.pexels.com/photos/907485/pexels-photo-907485.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');
+    background-image: url('https://images.pexels.com/photos/1083822/pexels-photo-1083822.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    z-index: -1; 
   }
 
-  &__name {
-    font-size: calc(2rem + 1vw);
-    font-weight: 600;
+  &__desc {
+    position: relative; 
+    text-align: center;
+    top: 20%; 
+
+    svg {
+      fill: $secondary;
+    }
+
+    #divider-1 {
+      margin-bottom: -2rem; 
+    }
+
+    #divider-2 {
+      margin-top: -0.5rem;
+    }
   }
 
-  &__title {
-    text-transform: uppercase;
-    font-size: calc(4.5rem + 1vw);
-    font-weight: 800; 
-    padding: 0.1em 0;
+  &__text {
+    background-color: $secondary;
+    padding: 0.5rem 1em 1.5rem;
+
+    & > div:first-child {
+      display: inline-block;
+
+      .name { 
+        font-size: calc(1rem + 2vw);
+        font-weight: 500;
+        text-align: right;
+        margin-bottom: -1rem; 
+        margin-right: 0.5em; 
+        color: lighten($secondary, 90%);
+      }
+  
+      .title {
+        text-transform: uppercase;
+        font-size: calc(1rem + 7vw);
+        font-weight: 800; 
+        padding: 0.1em 0;
+        margin: 0;
+        
+        span:nth-of-type(1) {
+          font-family: $experiment; 
+          text-transform: capitalize;
+          font-size: calc(1rem + 10vw);
+          color: $primary;
+        }
     
-    span:nth-of-type(1) {
-      color: $secondary;
-      text-shadow:
-      -1px -1px 0 lighten($secondary, 100%),  
-      1px -1px 0 lighten($secondary, 100%),
-      -1px 1px 0 lighten($secondary, 100%),
-      1px 1px 0 lighten($secondary, 100%);
+        span:nth-of-type(3) {
+          color: $primary; 
+        }
+      }
     }
 
-    span:nth-of-type(3) {
-      color: $primary; 
+    .skills {
+      margin: 0;
+      color: lighten($secondary, 90%);
+    }
+
+    a {
+      @extend .button; 
+      font-size: 1.8rem;
+      display: inline-block;
+      transform: scale(0.5, 0.5);
+      transition: transform 1s ease-out, opacity 1s ease-out; 
+      opacity: 0; 
+
+      &.appear {
+        opacity: 1; 
+        transform: scale(1, 1);
+        transition-delay: 1s;
+      }
+    }
+
+    //Intersection Observer rules
+    .transition {
+      opacity: 0;  
+      transform: translateY(2rem);
+      transition: opacity 1s ease-out, transform 1s ease-out; 
+
+      &.appear {
+        opacity: 1; 
+        transform: translateY(0);
+      }
     }
   }
+}
 
-  &__skills {
-    color: lighten($secondary, 90%);
-  }
-  a {
-    @extend .button; 
-    font-size: 1.8rem;
-  }
+#divider-3 {
+  fill: lighten($secondary, 6%);
+  margin: -3em 0 0; 
 }
