--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,11 +16,24 @@
     </ul>
   </nav>
   <div class="hero">
-      <p class="hero__name">Patricia Molnar</p>
-      <p class="hero__title">
-        <span>Web</span><span>Developer</span><span>.</span>
-      </p>
-      <p class="hero__skills">HTML5, CSS3, JavaScript, React, Node, Express, PHP, MongoDB, mySQL</p>
-      <a href="#portfolio">View Portfolio</a>
+      <div class="hero__background"></div>
+      <div class="hero__desc">
+        <svg id="divider-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 49"><polygon class="cls-1" points="0 49 0 0 245 29 381 0 500 24 500 49 0 49"/></svg>
+        <div class="hero__text">
+          <div>
+            <p class="name transition">Hi, I'm Patricia Molnar</p>
+            <p class="title transition">
+              <span>Web</span><span>Developer</span><span>.</span>
+            </p>
+          </div>
+          <p class="skills transition">HTML5, CSS3, JavaScript, React, Node, Express, PHP, MongoDB, mySQL</p>
+          <a href="#portfolio transition">View Portfolio</a>
+        </div>
+        <svg id="divider-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 49"><polygon class="cls-1" points="500 0 500 49 255 20 119 49 0 25 0 0 500 0"/></svg>
+      </div>
   </div>
 </header>
+
+<svg id="divider-3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 65">
+  <polygon class="cls-1" points="0 65 500 65 500 0 250 40 0 0 0 65"/>
+</svg>
