--- a/public/css/_base.scss
+++ b/public/css/_base.scss
@@ -15,6 +15,15 @@ h1, h2, h3, h4 {
 
 h3 {
   font-size: 3rem;
+  //Intersection Observer
+  opacity: 0;  
+  transform: translateY(-2rem);
+  transition: opacity 1s ease-out, transform 1s ease-out; 
+
+  &.appear {
+    opacity: 1; 
+    transform: translateY(0);
+  }
 }
 
 h4 {
@@ -84,3 +93,14 @@ a {
   } 
 }
 
+//Intersection Observer rules
+.transition {
+  opacity: 0;  
+  transform: translateY(2rem);
+  transition: opacity 1s ease-out, transform 1s ease-out; 
+
+  &.appear {
+    opacity: 1; 
+    transform: translateY(0);
+  }
+}
