--- a/public/css/_portfolio.scss
+++ b/public/css/_portfolio.scss
@@ -2,6 +2,10 @@
   background-color: lighten($secondary, 6%); 
   margin-top: -0.5em;
 
+  h3 {
+    margin-bottom: 0.5em;
+  }
+
   .grid {
     display: grid; 
     grid-template-columns: 1fr;
@@ -10,6 +14,26 @@
     &__card {
       background-color: lighten($secondary, 10%);
       box-shadow: $shadow;
+      overflow-x: hidden;
+
+      //Intersection Observer Rules
+      opacity: 0;  
+      transition: opacity 1s ease-out, transform 1s ease-out; 
+
+      //appear from the left
+      &:nth-child(odd) {
+        transform: translateX(-2em);
+      }
+
+      //appear from the right
+      &:nth-child(even) {
+        transform: translateX(2em);
+      }
+
+      &.appear {
+        opacity: 1; 
+        transform: translateX(0);
+      } 
     }  
 
     &__video {
