--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -6,22 +6,54 @@
 @import 'certificates';
 
 //skills 
-.skills__list {
-  color: lighten($secondary, 90%);
-  list-style-type: none;
-  padding: 0; 
-}
 
-.skills__lang {
-  @extend .certificates__lang; 
+.skills__card {
+  @extend .transition; 
+
+  .skills__lang {
+    @extend .certificates__lang; 
+    font-size: 2rem;
+    margin-bottom: 0;
+  }
+
+  .skills__list {
+    color: lighten($secondary, 90%);
+    list-style-type: none;
+    padding: 0; 
+    margin-top: 0; 
+  }
 }
 
 //About
 .about {
   @extend .portfolio; 
+
+  & > p {
+    @extend .transition;
+  }
 }
 
 //Contact 
+#contact {
+  & > p {
+    @extend .transition; 
+  }
+
+  &__link {
+    display: inline-block;
+    transform: scale(0.5, 0.5);
+    transition: transform 1s ease-out, opacity 1s ease-out; 
+    opacity: 0; 
+    margin-top: 0; 
+    margin-bottom: 0.5rem; 
+    
+    &.appear {
+      opacity: 1; 
+      transform: scale(1, 1);
+    }
+  }
+}
+
 #contact-button {
   border-bottom: none;
   background-color: $primary;
