--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -34,6 +34,4 @@
   </div>
 </header>
 
-<svg id="divider-3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 65">
-  <polygon class="cls-1" points="0 65 500 65 500 0 250 40 0 0 0 65"/>
-</svg>
+<svg id="divider-3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 55.5"><polygon class="cls-1" points="0 49 0 0 245 29 381 0 500 24 500 49 0 49"/></svg>
