--- a/public/css/_header.scss
+++ b/public/css/_header.scss
@@ -86,10 +86,7 @@
     inset: 0;
     background-color: $secondary; 
     // background-image: url('https://images.pexels.com/photos/907485/pexels-photo-907485.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');
-    background-image: url('https://images.pexels.com/photos/1083822/pexels-photo-1083822.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+    @include bg('https://images.pexels.com/photos/1083822/pexels-photo-1083822.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');
     z-index: -1; 
   }
 
@@ -171,5 +168,5 @@
 
 #divider-3 {
   fill: lighten($secondary, 6%);
-  margin: -3em 0 0; 
+  margin: -2em 0 -0.5rem; 
 }
