--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -3,26 +3,10 @@
 @import 'base';
 @import 'header';
 @import 'portfolio';
+@import 'skills';
 @import 'certificates';
-
-//skills 
-
-.skills__card {
-  @extend .transition; 
-
-  .skills__lang {
-    @extend .certificates__lang; 
-    font-size: 2rem;
-    margin-bottom: 0;
-  }
-
-  .skills__list {
-    color: lighten($secondary, 90%);
-    list-style-type: none;
-    padding: 0; 
-    margin-top: 0; 
-  }
-}
+@import '_contact.scss';
+@import '_footer.scss';
 
 //About
 .about {
@@ -30,65 +14,5 @@
 
   & > p {
     @extend .transition;
-  }
-}
-
-//Contact 
-#contact {
-  & > p {
-    @extend .transition; 
-  }
-
-  &__link {
-    display: inline-block;
-    transform: scale(0.5, 0.5);
-    transition: transform 1s ease-out, opacity 1s ease-out; 
-    opacity: 0; 
-    margin-top: 0; 
-    margin-bottom: 0.5rem; 
-    
-    &.appear {
-      opacity: 1; 
-      transform: scale(1, 1);
-    }
-  }
-}
-
-#contact-button {
-  border-bottom: none;
-  background-color: $primary;
-  display: inline-block; 
-  border-radius: 50%;
-  box-shadow: $shadow;
-
-  position: fixed; 
-  right: 1em; 
-  bottom: 1em; 
-
-  svg {
-    fill: $secondary; 
-    width: 24px; 
-    height: 24px;
-    padding: 0.5em 0.5em 0.3em;     
-  } 
-}
-
-//Footer
-footer {
-  @include pad(); 
-  font-size: 1.2rem;
-  @extend .social-media; 
-  margin-bottom: -3rem;
-  background-color: lighten($secondary, 5%);
-
-  .contact-details {
-    span {
-      display: flex; 
-      align-items: center;
-    }
-
-    a {
-      border-bottom: 1px solid $primary; 
-    }
   }
 }
