--- a/views/partials/about.ejs
+++ b/views/partials/about.ejs
@@ -1,3 +1,5 @@
+<svg class="divider light" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 55.5"><polygon class="cls-1" points="0 49 0 0 245 29 381 0 500 24 500 49 0 49"/></svg>
+
 <% if(data.about) { %>
   <section id="about" class="about">
     <h3>About<span class="primary">.</span></h3>
@@ -29,3 +31,4 @@
     <%- include('./socials'); %>
   </section>
 <% } %>
+<svg class="divider light" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 49"><polygon class="cls-1" points="500 0 500 49 255 20 119 49 0 25 0 0 500 0"/></svg>
