--- a/views/partials/skills.ejs
+++ b/views/partials/skills.ejs
@@ -1,3 +1,5 @@
+<svg class="divider light" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 49"><polygon class="cls-1" points="500 0 500 49 255 20 119 49 0 25 0 0 500 0"/></svg>
+
 <% if(data.skills) { %> 
   <section id="skills">
     <h3>Skills<span class="primary">.</span></h3>
