changing footer background image

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,5 @@
 <footer>
+  <div class="footer__bg"></div>
   <p>&copy; <span id="current-year"></span>Portfolio page of Patricia Molnar - Full Stack Web Developer</p>
   <div class="contact-details">
     <span>
