--- a/public/css/_footer.scss
+++ b/public/css/_footer.scss
@@ -1,13 +1,23 @@
 footer {
   @extend .social-media; 
   @include pad(); 
-  background-color: lighten($secondary, 5%);
-  @include bg('https://images.pexels.com/photos/1414706/pexels-photo-1414706.png?auto=compress&cs=tinysrgb&dpr=1&w=500', top left);
-
+  
   font-size: 1.2rem;
   padding-top: 4em; 
   margin-bottom: -3rem;
   margin-top: -3em;
+
+  position: relative;
+  
+  .footer__bg {
+    background-color: $secondary;
+    @include bg('https://images.pexels.com/photos/1182338/pexels-photo-1182338.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940', top left);
+  
+    position: absolute; 
+    inset: 0; 
+    z-index: -1;
+    opacity: 0.4;
+  }
 
   .contact-details {
     span {
