--- a/views/partials/contact.ejs
+++ b/views/partials/contact.ejs
@@ -1,8 +1,11 @@
 <section id="contact">
   <h3>Contact<span class="primary">.</span></h3>
-  <p>Thank you for checking out my portfolio. I am currently looking for an entry-level web developer position. If you have a job opening please feel free to call me on 0123456789 or send me an email to hello@patriciamolnar.com.</p>
-  <a href="#" class="button" id="contact__link">Contact</a>
-  <a href="" id="contact-button">
+  <p>Thank you for checking out my portfolio! I am currently looking for an <span class="underline bold">entry-level web developer position</span>.</p>
+  <p>
+    If you have a job opening please call me on <span class="underline bold">07856673788</span> or send me an email to <a href="mailto:hello@patriciamolnar.com" class="bold">hello@patriciamolnar.com</a> to chat about the role.
+  </p>
+  <a href="mailto:hello@patriciamolnar.com" class="button" id="contact__link">Contact</a>
+  <a href="mailto:hello@patriciamolnar.com" id="contact-button">
     <svg><use href="#envelope"></use></svg>
   </a>
 
