changing about copy

--- a/views/partials/about.ejs
+++ b/views/partials/about.ejs
@@ -5,8 +5,10 @@
     <h3>About<span class="primary">.</span></h3>
     
     <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, culpa.
+      Hello! I'm Patricia and I love creating different projects with code. When I am not working on a website or a web app, I like to create <a href="https://www.youtube.com/channel/UCnTVj2blZd_9_xpbo2t7ARw">YouTube tutorials</a> for others, who learn frontend web development. 
     </p>
+
+    <p>Some of my videos are:</p>
 
     <div class="grid">
       <% data.about.forEach(video => { %>
