adding tablet and desktop styling to header

--- a/views/partials/certificates.ejs
+++ b/views/partials/certificates.ejs
@@ -1,7 +1,7 @@
 <section id="certificates">
   <h3>Certificates<span class="primary">.</span></h3>
   <p>
-    I am a self-taught web developer, who acquired her knowledge by taking courses on LinkedIn Learning, watching YouTube videos, reading books and newsletters, listening to podcasts and of course by building projects.
+    I am a self-taught web developer, who acquired most her knowledge by taking courses on LinkedIn Learning, watching YouTube videos, reading books and newsletters, listening to podcasts and of course by building apps.
   </p>
 
   <p>Below you can see a list of the certificates I earned</p>
