--- a/public/css/_header.scss
+++ b/public/css/_header.scss
@@ -72,6 +72,7 @@
     font-weight: 600;
     font-size: calc(1rem + 5vw);
     padding: 0.5em;
+    border-bottom: none;
   }
 }
 
@@ -169,5 +170,102 @@
 
 #divider-3 {
   fill: lighten($secondary, 6%);
-  margin: -2em 0 -0.5rem; 
+  margin: -2em 0 -0.8rem; 
+}
+
+@media screen and (min-width: 35em) {
+  .hero {
+    padding-bottom: 1em;
+  }
+
+  #divider-3 {
+    margin: -3em 0 -1em; 
+  }
+}
+
+@media screen and (min-width: 50em) {
+  .hero {
+    &__desc {
+      display: inline-block; 
+      width: auto; 
+      left: 50%; 
+      transform: translateX(-50%);
+
+      svg {
+        display: none; 
+      }
+    }
+
+    &__text {
+      background-color: change-color($color: $secondary, $alpha: 0.6); 
+      padding: 0 2em 2em;
+
+      & > div:first-child {
+        .name { 
+          font-size: calc(1rem + 1.5vw);
+        }
+    
+        .title {
+          font-size: calc(1rem + 4vw);
+          
+          span:nth-of-type(1) {
+            font-size: calc(1rem + 7vw);
+          }
+        }
+      }
+    }
+  }
+
+  #divider-3 {
+    margin: -4em 0 -1em; 
+  }
+}
+
+//desktop
+@media screen and (min-width: 64em) {
+
+  .header__flex {
+    display: inline-block; 
+
+    .heading {
+      margin-left: 0.25em;
+    }
+  }
+
+  #burger {
+    display: none;
+  }
+
+  #nav {
+      display: inline; 
+      position: static; 
+      width: 100%; 
+      opacity: 1; 
+      height: auto;
+
+      ul {
+        display: inline-flex; 
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        gap: 1em;
+
+        float: right; 
+        width: auto; 
+        margin-top: 0em;
+        margin-right: 0.5em; 
+      }
+    
+      a {
+        display: inline-block;
+        color: lighten($secondary, 100%);
+        font-weight: 600;
+        font-size: calc(1rem + 1vw);
+        padding: 0.5em;
+      }
+  }
+
+  #divider-3 {
+    margin: -5em 0 -1.5em; 
+  }
 }
