--- a/public/css/_portfolio.scss
+++ b/public/css/_portfolio.scss
@@ -62,3 +62,13 @@
     }
   }
 }
+
+@media screen and (min-width: 50em) {
+  .portfolio {
+    .grid {
+      display: grid; 
+      grid-template-columns: repeat(2, 1fr);
+      gap: 2em; 
+    }
+  }
+}
