--- a/public/css/_contact.scss
+++ b/public/css/_contact.scss
@@ -36,3 +36,9 @@
     padding: 0.5em 0.5em 0.3em;     
   } 
 }
+
+@media screen and (min-width: 50em) {
+  #contact {
+    padding-top: 4em;
+  }
+}
