--- a/public/css/_skills.scss
+++ b/public/css/_skills.scss
@@ -19,9 +19,10 @@
 @media screen and (min-width: 50em) {
   .skills__grid {
     display: grid; 
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, auto);
     grid-template-areas: 'frontend backend database' 'frontend other noncode';
-    gap: 2em;
+    gap: 0 2em;
+    justify-content: space-between;
     
     .skills__card:nth-of-type(1) {
       grid-area: frontend;
