--- a/views/partials/about.ejs
+++ b/views/partials/about.ejs
@@ -17,10 +17,14 @@
             <iframe width="100%" height="100%" src=<%= video.youtube_url %> title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
           <div class="grid__copy">
-            <h4 class="grid__title"><%= video.title %></h4>
-            <p class="grid__desc"><%= video.description %></p>
-            <a href=<%= video.demo_url %> class="button">View Demo</a>
-            <a href=<%= video.code_url %> class="button">Source Code</a>
+            <div>
+              <h4 class="grid__title"><%= video.title %></h4>
+              <p class="grid__desc"><%= video.description %></p>
+            </div>
+            <div>
+              <a href=<%= video.demo_url %> class="button">View Demo</a>
+              <a href=<%= video.code_url %> class="button">Source Code</a>
+            </div>
           </div>
         </div>
       <% }); %>
