--- a/views/partials/contact.ejs
+++ b/views/partials/contact.ejs
@@ -2,15 +2,15 @@
   <h3>Contact<span class="primary">.</span></h3>
   <p>Thank you for checking out my portfolio! I am currently looking for an <span class="underline bold">entry-level web developer position</span>.</p>
   <p>
-    If you have a job opening please call me on <span class="underline bold">07856673788</span> or send me an email to <a href="mailto:hello@patriciamolnar.com" class="bold">hello@patriciamolnar.com</a> to chat about the role.
+    If you have a job opening and you think I could be suitable, please call me on <span class="underline bold">07856673788</span> or send me an email to <a href="mailto:hello@patriciamolnar.com" class="bold">hello@patriciamolnar.com</a> to discuss how I could benefit your organisation. 
   </p>
   <a href="mailto:hello@patriciamolnar.com" class="button" id="contact__link">Contact</a>
-  <a href="mailto:hello@patriciamolnar.com" id="contact-button">
+  <a href="#contact" id="contact-button">
     <svg><use href="#envelope"></use></svg>
   </a>
 
   <br />
-  <small>This link will open your mail software</small>
+  <small>This button will open your mail software.</small>
 </section>
 </main>
 
