--- a/public/css/_base.scss
+++ b/public/css/_base.scss
@@ -47,6 +47,11 @@ section {
   border-bottom: none; 
   position: relative;
 
+  &:hover {
+    border-bottom: 0; 
+    color: $secondary;
+  }
+
   &::after {
     content: ''; 
     position: absolute; 
@@ -67,6 +72,12 @@ a {
   color: $primary;
   text-decoration: none;
   border-bottom: 1px solid $primary;
+  transition: color 0.3s ease-in-out, border-bottom 0.3s ease-in-out;
+}
+
+a:hover {
+  color: $hover;
+  border-color: $hover;
 }
 
 ::marker {
@@ -91,6 +102,11 @@ a {
     display: inline; 
     width: 2.4rem; 
     height: 2.4rem;
+    transition: fill 0.5s ease-in-out; 
+  }
+
+  svg:hover {
+    fill: $hover; 
   }
 
   a {
