--- a/public/css/_footer.scss
+++ b/public/css/_footer.scss
@@ -27,6 +27,10 @@ footer {
 
     a {
       border-bottom: 1px solid $primary; 
+
+      &:hover {
+        border-color: $hover;
+      }
     }
   }
 }
