changing email address to plain text instead of link

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -4,10 +4,11 @@
   <div class="contact-details">
     <span>
       <svg><use href="#envelope"></use></svg>&nbsp;
-      <a href="mailto:hello@patriciamolnar.com">hello@patriciamolnar.com</a>
+      hello@patriciamolnar.com
     </span>
     <span>
-      <svg><use href="#phone"></use></svg> 07856673788
+      <svg><use href="#phone"></use></svg>&nbsp;
+      07856673788
     </span>   
   </div>
   <%- include('./socials') %>
